--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
+:root {
+  --darkColor: #222831;
+  --lightColor: #393e46;
+  --blue: #00adb5;
+}
+
 .App {
-  text-align: center;
+  display: grid;
+  place-items: center;
+  /* background: #393e46; */
+  /* background: #00adb5; */
+  background: var(--darkColor);
+  height: 100vh;
+  color: var(--darkColor);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: #eeeeee;
+  height: 80vh;
+  width: 80vw;
+  margin-top: -2vh;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  /* border-radius: 50%; */
 }
 
-.App-link {
-  color: #61dafb;
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 0px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--blue);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(14, 84, 84);
 }
